# scuttlebutt-attack

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  build_microram.sh  commitment.env  convert_trace.py  record.sh  target-rv64.json  update_commitment.py
constants/: Cargo.toml  lib.rs
secrets/: Cargo.toml  lib.rs  main.rs
secrets_dummy/: Cargo.toml  lib.rs  main.rs
src/: attacker.rs  comm_trace.rs  comm_trace_data.rs  comm_trace_types.rs  io_kernel.rs  io_merged.rs  kernel.rs  lib.rs  server.rs  util.rs
victim/: Cargo.toml  lib.rs
