[package]
name = "scuttlebutt-attack"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

[dependencies]
ssb-crypto = { version = "0.2.2", default-features = false, features = ["dalek"] }
ssb-handshake = { path = "deps/ssb-handshake", default-features = false }
genio = { version = "0.2.1", default-features = false }
rand = { version = "0.7.3", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }

serde = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
serde_cbor = { version = "0.11", optional = true }

scuttlebutt-attack-secrets = { path = "secrets", optional = true }
scuttlebutt-attack-constants = { path = "constants", optional = true }

[patch.crates-io]
curve25519-dalek = { path = "deps/curve25519-dalek/" }

[features]
std = ["serde", "serde_bytes", "serde_cbor"]
microram = []
constants = ["scuttlebutt-attack-constants"]
secrets = []
inline-secrets = ["scuttlebutt-attack-secrets"]

[workspace]
members = ["secrets"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[[bin]]
name = "recorder"
required-features = ["std", "constants"]

[[bin]]
name = "victim"
required-features = ["constants", "secrets"]

[[bin]]
name = "attacker"
required-features = ["secrets"]

[[bin]]
name = "attacker_merged"
required-features = ["secrets"]

[[bin]]
name = "kernel_attacker"
required-features = ["secrets"]

[[bin]]
name = "checker"
required-features = ["secrets"]
