[package]
name = "scuttlebutt-attack-victim"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
scuttlebutt-attack = { path = ".." }
rand = { version = "0.7.3", default_features = false }
rand_chacha = { version = "0.2.2", default-features = false }

# The following crates are listed only to force specific features
ppv-lite86 = { version = "0.2", default-features = false, features = ["no_simd"] }
poly1305 = { version = "0.6.2", default-features = false, features = ["force-soft"] }
sha2 = { version = "0.9.9", default-features = false, features = ["force-soft"] }

